--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -8,6 +8,7 @@ jobs:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
+      # Simple time-based stats with athul/waka-readme
       - name: Weekly WakaTime Stats
         uses: athul/waka-readme@master
         with:
@@ -17,6 +18,7 @@ jobs:
           SHOW_TITLE: true
           TIME_RANGE: last_7_days
           SECTION_NAME: weekly
+          
       - name: Monthly WakaTime Stats
         uses: athul/waka-readme@master
         with:
@@ -26,6 +28,7 @@ jobs:
           SHOW_TITLE: true
           TIME_RANGE: last_30_days
           SECTION_NAME: monthly
+          
       - name: All Time WakaTime Stats
         uses: athul/waka-readme@master
         with:
@@ -34,3 +37,27 @@ jobs:
           SHOW_TOTAL: true
           SHOW_TITLE: true
           TIME_RANGE: all_time
+          SECTION_NAME: alltime
+      
+      # Comprehensive stats with anmol098/waka-readme-stats
+      - name: Comprehensive Dev Metrics
+        uses: anmol098/waka-readme-stats@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SECTION_NAME: waka
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
+          SHOW_PROFILE_VIEWS: "True"
+          SHOW_COMMIT: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_OS: "True"
+          SHOW_PROJECTS: "True"
+          SHOW_TIMEZONE: "False"
+          SHOW_EDITORS: "True"
+          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_SHORT_INFO: "True"
+          SHOW_LOC_CHART: "True"
+          SHOW_UPDATED_DATE: "True"
+          LOCALE: "en"
